# AIC-103_Data_Science_Project

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  mkdocs.yml  pyproject.toml  requirements.txt  untitled.md
aic_103_data_science_project/: __init__.py  dataset.py  features.py  plots.py
aic_103_data_science_project/modeling/: predict.py  train.py
docs/: data_exploration.md  data_reporting.md  index.md  overview.md  project_structure.md
docs/docs/: index.md
notebooks/: altered-ETL.ipynb  incident-exploration.ipynb  inspections-ETL.ipynb  installed-ETL.ipynb  licence-ETL.ipynb
reports/: altered_data_findings.md  final_report.md  incidents_data_findings.md  inspection_data_findings.md  installed_data_findings.md  license_data_findings.md
site/: 404.html  index.html
site/data_exploration/: index.html
site/data_reporting/: index.html
site/deliverables/: index.html
site/getting_started/: index.html
site/license/: index.html
site/overview/: index.html
site/presentation/: index.html
site/project_structure/: index.html
site/search/: search_index.json
